refactor: users route
